# Cartago

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/Exports/: Exports.hpp
include/Memory/: Memory.hpp  RvaOffset.hpp
scripts/: Debug.cmd  Prepare.cmd  Release.cmd  open.cmd
src/: main.cpp
src/Exports/: Exports.cpp
src/Memory/: Memory.cpp  RvaOffset.cpp
